    - Made vanadium oxide take 2 vanadium and 5 oxygen, instead of 4 vanadium.
    - Changed oleum to use 5 sulfuric acid instead of 10.
    - Changed solders stack size to 75.
    - Changed semiconductors stack size to 25.
    - Increase range + reach of medium electric poles, so they can reach around assemblers.

  Fixes:
    - Fixed the science pack item names captilisation.
    - (Mostly) Fixed the Factoriopedia being a mess. Never not name your recipes after their outputs.
    - Fixed empty reactor cells taking 0.5s to craft, and not 20s. Sucks to suck, huh?
    - Finally got rid of the plastic bar item that appears in the factoriopedia and item menus.
    - Re-ordered science to actually be in the correct order (normal > plastic > francium)
    - Fixed the ordering of certain subgroups, for real this time.
    - Fixed random things like explosives not being in the presumably correct category.
    - Made slugs actually work with 2.0, im not sure how well they now work so any balance or suggestions are greatly appreciated.
    - Changed byproduct handling to be unlockable from ezekiel processing, and not transition metal leeching.
    - Added the heavy lubricant recipe of solar cells to lubricant technology.
    - Fixed ezekiel ore leeching to actually give the correct amount of ore. This hurts you more then it hurts me, i assure you.
    - Fixed the category tabs not using up the amount of space they have.
    - Fixed molten metal capatalisation.
    - Revamped all ammo recipes, to be cheaper and just better.
    - Made the health bio-upgrade's description be more relevant.
    - Reworked values for battery capacity bonuses, increasing the amount you get.
    - Fixed health bio-modules not doubling in amount at the right technology.
    - Fixed the times for solar panel 2 not matching with solar panel 1.
    - Made directly compatable mods be optionally dependent, not hidden optional.
    - Corrected the ordering of the fuel subgroup.