@@ -31,10 +31,10 @@ data:extend({
         allow_productivity = true,
         ingredients =
         {
-          PM.ingredient("pm-carbon-dioxide-air-filter", 1),
-          PM.ingredient("pm-gold-plate", 3),
+          PM.ingredient("pm-advanced-air-filter", 1),
+          PM.ingredient("pm-nickel-plate", 3),
           PM.ingredient("pm-iodine", 2),
-          PM.ingredient("pm-lightweight-framing", 6)
+          PM.ingredient("pm-lightweight-framing", 3)
         },
         results =
         {
