@@ -46,10 +46,10 @@ data:extend({
         allow_productivity = true,
         ingredients =
         {
-          PM.ingredient("pm-nitrogen-air-filter", 1),
-          PM.ingredient("pm-gold-plate", 3),
+          PM.ingredient("pm-advanced-air-filter", 1),
+          PM.ingredient("pm-manganese-plate", 3),
           PM.ingredient("pm-iodine", 2),
-          PM.ingredient("pm-lightweight-framing", 6)
+          PM.ingredient("pm-lightweight-framing", 3)
         },
         results =
         {
